--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
             <h3>Desenvolvedor front-end</h3>
         </div>
     </div>
+    <section>
+        
+    </section>
 </body>
 </html>
